v0.14:

o hellanzb now looks for the hellanzb.conf file in the following
  places/order:

  local paths: ./, ./etc/, or ~/.hellanzb/
  system paths: sys.prefix, /etc, /etc/hellanzb

o Report SAXException information when an invalid NZB could not be
  parsed (noticed by TU)

o Fixed a potential lockup with multiple defineServers that occurs
  when an article does not exist on one server and failed the CRC
  check on another server (thanks jon at sd - 6, others)


v0.13:

o Can now optionally store encoded article segments in memory,
  instead of disk. This can improve performance and CPU usage in
  some cases. Set CACHE_LIMIT to a non zero value to enable.
  
  Hellanzb.CACHE_LIMIT = -1 # for an unlimited sized cache, or
  Hellanzb.CACHE_LIMIT = '100MB' # for a certain size

o Added SSL NNTP support: defineServer ssl=True. (patch
  submitted by Oscar H)

o Fixed the PostProcessor on Windows, which would produce the
  error:

  exceptions.ValueError: The usePTY parameter is not supported
                         on Windows.

o Fixed download problems on Windows, which would repeatedly
  produce errors such as:

  Archive segment: 2 does not have a valid CRC/yend line!

  (thanks Ryan van Barneveld)

o Fixed total archive time reported at the end of PostProcessing
  (downloadTime was tallied as 0)

o Fixed the Hellanzb.CATEGORIZE_DEST option: it was impossible to
  disable in v0.12

o Fixed PostProcessor handling of filenames containing double quotes

o Fixed the error message:

 exceptions.TypeError: errBack() takes exactly 2 arguments (1 given)

 occurring during failed newzbin download attempts (thanks mke & JJ2)

o Fixed the following error triggered after failed yenc CRC checks:

  File "hellanzb-0.12/Hellanzb/NZBLeecher/ArticleDecoder.py", line 685,
          in assembleNZBFile
      decodedSegmentFile = open(nzbSegment.getDestination(), 'rb')
  exceptions.IOError: [Errno 2] No such file or directory: 

  This issue was introduced in v0.11.


v0.12:
